--- a/src/Components/Video/video.scss
+++ b/src/Components/Video/video.scss
@@ -2,7 +2,17 @@
 
 .video {
     &__player {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        background-color: black;
+
+        &-container{
+            position: relative;
+            padding-bottom: 56.25%;
+        }
     }
 
     &__info {
