UPDATE:responsivness of site is complete, mobile, tablet, and desktop are complete... ADDITIONAL: updated the comments to change according to the video selected, created a new component for 'video info' to then put the video info and comments into its own container to provide the desktop mockup look

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @use './Styles/partials/fonts' as *;
 @use './Styles/partials/colors' as *;
+@use './Styles/partials/mixins' as *;
 
 * {
   box-sizing: inherit;
@@ -9,4 +10,17 @@ body {
   box-sizing: border-box;
   font-family: Avenir Next, Helvetica, sans-serif;
   color: $BrainFlix-Black;
+}
+
+.videoinfo-and-list{
+  @include desktop{
+    display: flex;
+    padding: 1rem 6rem 0 6rem;
+  }
+}
+.videoinfo-and-comments{
+  @include desktop{
+    border-right: 1px solid $Mercury;
+    padding-bottom: 2rem;
+  }
 }
