--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,10 +1,25 @@
+@use '../../Styles/partials/mixins' as *;
+@use '../../Styles/partials/variables' as *;
+
 .header{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
 
+    @include tablet{
+        flex-direction: row;
+    }
+
+    @include desktop{
+        padding: 1rem 6rem;
+    }
+
     &__logo{
         width: 7.5rem;
+
+        @include tablet{
+            margin-left: 1.5rem;
+        }
     }
 }
