--- a/src/Components/Nav/nav.scss
+++ b/src/Components/Nav/nav.scss
@@ -1,51 +1,84 @@
-@use '../../Styles/partials/colors' as *;
+@use "../../Styles/partials/colors" as *;
+@use "../../Styles/partials/mixins" as *;
+@use "../../Styles/partials/variables" as *;
 
-.navbar{
+.navbar {
     display: flex;
     flex-direction: column;
     width: 100%;
 
-    &__form{
+    @include tablet {
+        position: relative;
+        flex-direction: row;
+        justify-content: flex-end;
+        padding-right: 3.8rem;
+    }
+
+    &__form {
         display: flex;
         justify-content: space-between;
         padding-top: 1rem;
 
-        &-search{
+        @include tablet{
+            padding-top: 0;
+        }
+
+        &-search {
             background-image: url(../../Assets/Icons/search.svg);
             background-repeat: no-repeat;
             background-position: left;
-            padding: .5rem;
-            padding-left: 1.6rem;
+            background-position-x: 1rem;
+            background-color: $Alablaster;
+            padding: 0.5rem;
+            padding-left: 2.6rem;
             border-radius: 4px;
             border: 1px solid $Mercury;
             width: 15rem;
-            font-size: .75rem;
+            font-size: 0.75rem;
         }
 
-        &-pfp{
+        &-pfp {
             background-color: $Mercury;
             width: 2.2rem;
             height: 2.2rem;
             border-radius: 50%;
             object-fit: cover;
+
+            @include tablet {
+                position: absolute;
+                right: 4px;
+                width: 2.5rem;
+                height: 2.5rem;
+                // display: none;
+            }
         }
     }
 
-    &__button{
+    &__button {
         text-decoration: none;
         text-align: center;
         font-weight: 700;
-        font-size: .75rem;
+        font-size: 0.75rem;
         color: $White;
         background-color: $BrainFlix-Blue;
         width: 100%;
         height: 2.5rem;
         margin-top: 1rem;
-        padding: .75rem;
+        padding: 0.75rem;
         border-radius: 4px;
         background-image: url(../../Assets/Icons/upload.svg);
         background-color: $BrainFlix-Blue;
         background-repeat: no-repeat;
         background-position: left;
+
+        @include tablet {
+            width: 30%;
+            margin-top: 0;
+            margin-left: 1.5rem;
+        }
+
+        @include desktop{
+            width: 18%;
+        }
     }
 }
