--- a/src/Components/NextVideo/nextvideo.scss
+++ b/src/Components/NextVideo/nextvideo.scss
@@ -1,5 +1,6 @@
 @use '../../Styles/partials/colors' as *;
 @use '../../Styles/partials/fonts' as *;
+@use '../../Styles/partials/mixins' as *;
 
 .video__list-video{
     display: flex;
@@ -8,6 +9,14 @@
     align-items: center;
     width: 18rem;
 
+    @include tablet{
+        width: 20rem;
+    }
+
+    @include desktop{
+        margin-bottom: .5rem;
+    }
+
     &-thumbnail{
         width: 6.3rem;
         height: 3.7rem;
@@ -15,19 +24,31 @@
         border-radius: 4px;
         background: $Mercury;
         margin: 1rem 1rem 0 0;
+
+        @include desktop{
+            height: 4rem;
+        }
     }
 
     &-text{
         display: flex;
         flex-direction: column;
         width: 10rem;
+
+        @include tablet{
+            width: 12rem;
+        }
     }
 
     &-title{
         font-size: .801rem;
+
+        @include tablet{
+            font-size: .87rem;
+        }
     }
 
     &-channel{
-        font-size: .801rem;
+        @extend .video__list-video-title
     }
 }
