--- a/src/Components/Video/video.scss
+++ b/src/Components/Video/video.scss
@@ -1,4 +1,5 @@
 @use "../../Styles/partials/colors" as *;
+@use "../../Styles/partials/mixins" as *;
 
 .video {
     &__player {
@@ -12,78 +13,6 @@
         &-container{
             position: relative;
             padding-bottom: 56.25%;
-        }
-    }
-
-    &__info {
-        padding: 0 1rem;
-
-        &-title {
-            font-size: 1.5rem;
-            padding-bottom: 1rem;
-            border-bottom: 1px solid $Mercury;
-        }
-
-        &-sub {
-            display: flex;
-            justify-content: space-between;
-            width: 85%;
-            padding-bottom: 1rem;
-            border-bottom: 1px solid $Mercury;
-        }
-
-        &-one {
-            display: flex;
-            flex-direction: column;
-        }
-
-        &-channel {
-            font-size: 0.8rem;
-            margin: 0;
-        }
-
-        &-date {
-            @extend .video__info-channel;
-            color: $Silver;
-            padding-top: 1rem;
-        }
-
-        &-two {
-            @extend .video__info-one;
-        }
-
-        &-views {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-
-            &-title {
-                @extend .video__info-date;
-                padding-top: 0;
-                padding-left: 0.5rem;
-            }
-        }
-
-        &-likes {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding-top: 1rem;
-
-            &-title {
-                @extend .video__info-date;
-                padding-left: 0.5rem;
-                padding-top: 0;
-            }
-        }
-
-        &-description{
-            font-size: .801rem;
-        }
-
-        &-comment-count{
-            @extend .video__info-channel;
-            font-weight: 700;
         }
     }
 }
