FINAL UPDATE: changed stying of the navbar to remove 'absolute positioning and include more flexbox tools

--- a/src/Components/Nav/nav.scss
+++ b/src/Components/Nav/nav.scss
@@ -11,16 +11,24 @@
         position: relative;
         flex-direction: row;
         justify-content: flex-end;
-        padding-right: 3.8rem;
+        padding-right: 1rem;
     }
 
     &__form {
         display: flex;
         justify-content: space-between;
         padding-top: 1rem;
+        flex-wrap: wrap;
 
         @include tablet{
             padding-top: 0;
+            justify-content: space-evenly;
+            flex-wrap: nowrap;
+        }
+
+        @include desktop{
+            width: 50rem;
+            justify-content: flex-end;
         }
 
         &-search {
@@ -45,11 +53,15 @@
             object-fit: cover;
 
             @include tablet {
-                position: absolute;
+                order: 3;
                 right: 4px;
                 width: 2.5rem;
                 height: 2.5rem;
-                // display: none;
+                margin-left: 1rem;
+            }
+
+            @include desktop{
+                margin-left: 2.5rem;
             }
         }
     }
