UPDATE: upload-page completed... responsive to all display sizes. TO DO: display that the user has published their video and redirect them back to home page

--- a/src/Components/Nav/nav.scss
+++ b/src/Components/Nav/nav.scss
@@ -84,7 +84,7 @@
         background-position: left;
 
         @include tablet {
-            width: 30%;
+            width: 10rem;
             margin-top: 0;
             margin-left: 1.5rem;
         }
