--- a/src/Components/CommentForm/commentForm.scss
+++ b/src/Components/CommentForm/commentForm.scss
@@ -1,6 +1,6 @@
-@use '../../Styles/partials/colors' as *;
-@use '../../Styles/partials/fonts' as *;
-@use '../../Styles/partials/mixins' as *;
+@use "../../Styles/partials/colors" as *;
+@use "../../Styles/partials/fonts" as *;
+@use "../../Styles/partials/mixins" as *;
 
 .comments__form {
     display: flex;
@@ -11,11 +11,11 @@
         padding-bottom: 1rem;
         border-bottom: 1px solid $Mercury;
 
-        @include tablet{
+        @include tablet {
             padding-bottom: 1.5rem;
         }
 
-        @include tablet{
+        @include tablet {
             padding-right: 1.5rem;
         }
 
@@ -26,7 +26,7 @@
             margin-top: 1.5rem;
             object-fit: cover;
 
-            @include tablet{
+            @include tablet {
                 margin-top: 1.3rem;
             }
         }
@@ -37,19 +37,19 @@
             padding-left: 1rem;
             flex-grow: 1;
 
-            &--container{
-                @include tablet{
+            &--container {
+                @include tablet {
                     display: flex;
                     justify-content: space-between;
                 }
             }
         }
 
-        &-title{
-            font-size: .75rem;
+        &-title {
+            font-size: 0.75rem;
             color: $Silver;
             font-weight: 700;
-            margin-bottom: .37rem;
+            margin-bottom: 0.37rem;
         }
 
         &-textarea {
@@ -57,19 +57,19 @@
             border-radius: 4px;
             border: 1px solid $Mercury;
             font-family: Avenir Next;
-            padding: .7rem;
+            padding: 0.7rem;
             resize: none;
             height: 5rem;
             background-color: $Alablaster;
 
-            @include tablet{
+            @include tablet {
                 height: 2.5rem;
                 width: 32rem;
                 margin-bottom: 0;
             }
         }
 
-        &-textarea::placeholder{
+        &-textarea::placeholder {
             color: black;
         }
 
@@ -86,12 +86,12 @@
             background-position-x: 5px;
             background-size: 1.1rem;
             color: $White;
-            font-size: .75rem;
+            font-size: 0.75rem;
             font-weight: 700;
             text-decoration: none;
             text-align: center;
 
-            @include tablet{
+            @include tablet {
                 width: 10rem;
                 margin-left: 1.5rem;
                 height: 2.5rem;
