--- a/src/Components/NextVideo/nextvideo.scss
+++ b/src/Components/NextVideo/nextvideo.scss
@@ -1,23 +1,23 @@
-@use '../../Styles/partials/colors' as *;
-@use '../../Styles/partials/fonts' as *;
-@use '../../Styles/partials/mixins' as *;
+@use "../../Styles/partials/colors" as *;
+@use "../../Styles/partials/fonts" as *;
+@use "../../Styles/partials/mixins" as *;
 
-.video__list-video{
+.video__list-video {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     width: 18rem;
 
-    @include tablet{
+    @include tablet {
         width: 20rem;
     }
 
-    @include desktop{
-        margin-bottom: .5rem;
+    @include desktop {
+        margin-bottom: 0.5rem;
     }
 
-    &-thumbnail{
+    &-thumbnail {
         width: 6.3rem;
         height: 3.7rem;
         object-fit: cover;
@@ -25,34 +25,30 @@
         background: $Mercury;
         margin: 1rem 1rem 0 0;
 
-        @include desktop{
+        @include desktop {
             height: 4rem;
         }
     }
 
-    &-text{
+    &-text {
         display: flex;
         flex-direction: column;
         width: 10rem;
 
-        @include tablet{
+        @include tablet {
             width: 12rem;
         }
     }
 
-    &-title{
-        font-size: .801rem;
+    &-title {
+        font-size: 0.801rem;
 
-        @include tablet{
-            font-size: .87rem;
+        @include tablet {
+            font-size: 0.87rem;
         }
     }
 
-    &-channel{
-        @extend .video__list-video-title
+    &-channel {
+        @extend .video__list-video-title;
     }
-}
-.video-link{
-    text-decoration: none;
-    color: $BrainFlix-Black;
 }
