--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -141,7 +141,6 @@
             font-weight: 700;
             font-size: 0.75rem;
             color: $White;
-            background-color: $BrainFlix-Blue;
             width: 100%;
             height: 2.5rem;
             margin-top: 0.5rem;
@@ -151,6 +150,7 @@
             background-color: $BrainFlix-Blue;
             background-repeat: no-repeat;
             background-position: left;
+            border: none;
 
             @include tablet {
                 order: 2;
@@ -167,6 +167,36 @@
                 margin-top: 2.3rem;
                 margin-bottom: 1.5rem;
             }
+        }
+    }
+
+    &__modal{
+        padding: 2rem;
+
+        &-title{
+
+        }
+        &-button--home{
+            text-decoration: none;
+            text-align: center;
+            font-weight: 700;
+            font-size: 0.75rem;
+            color: $White;
+            height: 2.5rem;
+            margin-top: 0.5rem;
+            padding: 0.75rem;
+            border-radius: 4px;
+            background-color: $BrainFlix-Blue;
+            background-repeat: no-repeat;
+            background-position: left;
+            border: none;
+            width: 10rem
+        }
+
+        &-button--back{
+            @extend .upload__modal-button--home;
+            background: none;
+            color: $BrainFlix-Blue;
         }
     }
 }
